--- a/index.html
+++ b/index.html
@@ -4,12 +4,87 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="author" content="Jenny Tapani, Tyra Jansdotter, Elizabeth Nasimbwa">
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="style.css">
 <title> JET projektet </title>
 </head>
 <body>
 
-<!--Testar att göra en kommentar här !-->
-<!-- testar -->
+<header>
+  <!--Header-grafik här -->
+  <h1><img alt="JET Dammsugaren" width="455" height="100" src="images/header.svg"></h1>
+  <nav>
+    <ul>
+      <li> <a href="#appen">Appen</a></li>
+      <li> <a href="#galleri">Galleri</a></li>
+      <li> <a href="#spec">Specifikationer</a></li>
+    </ul>
+  </nav>
+</header>
+<main>
+
+  <section id="video">
+    <video width="600" height="400" controls>
+      <source src="movie.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+    </video>
+  </section>
+
+  <section id="appen">
+      <img id="appMockup" alt="Den nya appens startskärm" width="227" height="463" src="images/app-Mockup1.gif">
+      <div class="Vblock1">
+        <h2 class="App_Rubrik">Rubrik 1</h2>
+        <p class="App_Text"> Skulle man någonsin tillämpa ordspråket "lifvet vexlar", så är det utan
+den ringaste gensägelse på Gustaf Eriksson, Erik XIV:s och Katarina
+Månsdotters son. Med allt skäl kan man säga att han af lifvets vindkast
+slungades omkring som en boll från det ena landet till till det andra.
+ </p>
+      </div>
+      <div class="Hblock1">
+        <h2 class="App_Rubrik">Rubrik 2</h2>
+        <p class="App_Text"> Än spåra vi honom i Tyskland, der haa dock utstod de svåraste lidanden,
+        hans lefnad var underkastad; än finna vi honom i Sverige vid mötet med
+        systern, än i Ryssland, i hvilket land ödet ändtligen förunnade honom
+        en graf. Erik XIV var en folkets konung. Hans son var och är en i
+        folkets ögon kär personlighet, kring hvilken en mystisk slöja drager
+        ett djupt poetiskt skimmer. Född arfvinge till svenska kronan, men
+        genom farbroderns, den illistige Johan III:s ränker utstött derifrån,  </p>
+      </div>
+      <div class="Vblock2">
+        <h2 class="App_Rubrik">Rubrik 3</h2>
+        <p class="App_Text"> måste konungasonen landsflyktig irra omkring i främmande länder, och så
+godt som lifnära sig af andra furstars gifmildhet. Ett vackert drag i
+Sigismunds karaktär är det, att han på alla möjliga sätt omhuldade
+Gustaf, och det oaktadt Johan III alls icke på något otvetydigt sätt
+lät förstå, att brorsonens uudanrödjande skulle ligga honom särdeles
+varmt om hjertat.
+
+</p>
+      </div>
+      <div class="Hblock2">
+        <h2 class="App_Rubrik">Rubrik 4</h2>
+        <p class="App_Text"> Se här Gustaf Erikssons korta, men oändligt vackra saga, hvars senare
+        del utgör ämnet för vår lilla berättelse.
+        När upprorsförsöken mot Johan III blefvo allt tätare, begynte han,
+        såsom man säger, draga öronen åt sig med afseende på hufvadmännen för
+        uppviglingarne. Alldeles utan skäl misstänkte han brorsonen, som var
+        naturlig arfvinge till kronan, för indirekta stämplingar, oaktadt han
+        ännu var bara barnet, och konungen beslöt för den skull att skaffa
+        honom ur vägen.</p>
+      </div>
+  </section>
+
+  <section id="galleri">
+  </section>
+
+  <section id="spec">
+  </section>
+
+</main>
+
+<footer>
+  Kontakt etc..
+</footer>
+
+
 </body>
 </html>
