Klar med grundstruktur och css, lade till en "frontpage"

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
 <header>
-  <!--Header-grafik här -->
-  <h1><img alt="JET Dammsugaren" width="455" height="100" src="images/header.svg"></h1>
+  <!--Header-grafik här som länkar till framsidan när man klickar på den-->
+  <h1><a href="frontpage.html"><img alt="JET Dammsugaren" width="228" height="50" src="images/header.svg"></a></h1>
   <nav>
     <ul>
+      <li> <a href="#video">Video</a></li>
       <li> <a href="#appen">Appen</a></li>
       <li> <a href="#galleri">Galleri</a></li>
       <li> <a href="#spec">Specifikationer</a></li>
@@ -119,7 +120,15 @@ varmt om hjertat.
 </main>
 
 <footer>
-  Kontakt etc..
+  <h2>e</h2>
+  <section id="kontakt">
+    <h3>Kontakt</h3>
+      <p>Hemsida programmerad av: Jenny Tapani</p>
+      <p>Designkoncept ritad av: Elizabeth Nasimbwa</p>
+      <p>Video framtagen av: Tyra Jansdotter</p>
+      <p class="epost"><a href="mailto:jentap@gmail.com">Jenny</a> <a href="mailto:elizabeth.nasimbwa@gmail.com">Elizabeth</a> <a href="mailto:tyra.jansdotter0001@stud.hkr.se">Tyra</a>
+    </section>
+
 </footer>
 
 
