Lagt in de rätta texterna

--- a/index.html
+++ b/index.html
@@ -29,27 +29,24 @@
       <source src="movie.mp4" type="video/mp4">
           Your browser does not support the video tag.
     </video>
+    <p>Oväntat besök? Städa enkelt med nya JET!</p>
   </section>
 
   <section id="appen">
     <h2>Appen</h2>
-      <img id="appMockup" alt="Den nya appens startskärm" width="227" height="463" src="images/app-Mockup1.gif">
+      <img id="appMockup" alt="Den nya appen - välj rutt" width="226" height="463" src="images/app-Mockup2.gif">
       <div id="appBlurb">
-        <h3>Rubrik</h3>
-        <p class="panel_Text">Skulle man någonsin tillämpa ordspråket "lifvet vexlar", så är det utan
-  den ringaste gensägelse på Gustaf Eriksson, Erik XIV:s och Katarina
-  Månsdotters son. Med allt skäl kan man säga att han af lifvets vindkast
-  slungades omkring som en boll från det ena landet till till det andra. </p>
-  <h3>Rubrik</h3>
-  <p class="panel_Text">Skulle man någonsin tillämpa ordspråket "lifvet vexlar", så är det utan
-den ringaste gensägelse på Gustaf Eriksson, Erik XIV:s och Katarina
-Månsdotters son. Med allt skäl kan man säga att han af lifvets vindkast
-slungades omkring som en boll från det ena landet till till det andra. </p>
+        <h3>Välj rutt</h3>
+        <p class="panel_Text">
+          JET robotdammsugare låter dig välja rutt och därmed är det du som
+          bestämmer vilka områden du vill prioritera för städning, precis
+          som om du hade städat själv. </p>
+        <h3>Schemalägg</h3>
+        <p class="panel_Text">Schemaläggning gör det möjligt för dig att få
+          nystädat inför en specifik aktivitet till exempel en middagsbjudning eller
+          få städat medan du är på jobbet och kom hem till ett nystädat hem varje dag. </p>
       </div>
-      <div id="appImages">
-        bilden 1
-        bilden 2
-      </div>
+        <img id="appMockup2" alt="Den nya appen - schemalägg" width="226" height="463" src="images/app-Mockup3.gif">
   </section>
 
   <section id="galleri">
@@ -96,24 +93,43 @@ varmt om hjertat.
   <section id="spec">
     <h2>Specifikationer</h2>
     <div class="spec_panel">
-      <h2 class="spec_Rubrik">-1-</h2>
-      <p class="panel_Text"> Ett vackert drag i Sigismunds karaktär är det, att han på alla möjliga sätt omhuldade Gustaf, och det oaktadt Johan III alls icke på något otvetydigt sätt lät förstå, att brorsonens uudanrödjande skulle ligga honom särdeles varmt om hjertat.
-      </p>
+      <h3 class="spec_Rubrik">Egenskaper</h3>
+        <p>Perfekt rengöring</p>
+        <p>Stor dammbehållare</p>
+        <p>Hörnrengöring</p>
+        <p>Säkerhetsstystem</p>
+        <p>Främre borste</p>
+        <p>Tvättbart filter</p>
+        <p>Filterindikator</p>
+        <p>Programerbar timer</p>
+        <p>Lättviktskonstruktion</p>
+        <p>Påslös</p>
+
     </div>
     <div class="spec_panel">
-      <h2 class="spec_Rubrik">-2-</h2>
-      <p class="panel_Text"> Ett vackert drag i Sigismunds karaktär är det, att han på alla möjliga sätt omhuldade Gustaf, och det oaktadt Johan III alls icke på något otvetydigt sätt lät förstå, att brorsonens uudanrödjande skulle ligga honom särdeles varmt om hjertat.
-      </p>
+      <h3 class="spec_Rubrik">Mjukvara</h3>
+        <p>Senaste tekniken</p>
+        <p>Enkla menyer</p>
+        <p>Uppdaterbar - Ja</p>
+        <p>Virtuell barriär - Nej</p>
+        <p>Språkval - Ja</p>
+        <p>Ljus - av/på</p>
+        <p>Ljud - av/på</p>
+
     </div>
     <div class="spec_panel">
-      <h2 class="spec_Rubrik">-3-</h2>
-      <p class="panel_Text"> Ett vackert drag i Sigismunds karaktär är det, att han på alla möjliga sätt omhuldade Gustaf, och det oaktadt Johan III alls icke på något otvetydigt sätt lät förstå, att brorsonens uudanrödjande skulle ligga honom särdeles varmt om hjertat.
-      </p>
+      <h3 class="spec_Rubrik">Mått</h3>
+        <p>Höjd, mm 58 </p>
+        <p>Diameter, mm 235</p>
+        <p>Nettovikt, kg 2.32</p>
+
     </div>
     <div class="spec_panel">
-      <h2 class="spec_Rubrik">-4-</h2>
-      <p class="panel_Text"> Ett vackert drag i Sigismunds karaktär är det, att han på alla möjliga sätt omhuldade Gustaf, och det oaktadt Johan III alls icke på något otvetydigt sätt lät förstå, att brorsonens uudanrödjande skulle ligga honom särdeles varmt om hjertat.
-      </p>
+      <h3 class="spec_Rubrik">Tillbehör</h3>
+      <!--p class="panel_Text"-->
+        <p>Fjärrkontroll - Ja</p>
+        <p>App - Ja</p>
+        <p>Extra filter - 2</p>
     </div>
   </section>
 
