--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta name="description" content="">
 <meta name="author" content="Jenny Tapani, Tyra Jansdotter, Elizabeth Nasimbwa">
 <link rel="stylesheet" href="style.css">
+<link rel="icon" href="images/browser-icon.png">
 <title> JET projektet </title>
 </head>
 <body>
 
 <header>
-  <!--Header-grafik här som länkar till framsidan när man klickar på den-->
-  <h1><a href="frontpage.html"><img alt="JET Dammsugaren" width="228" height="50" src="images/header.svg"></a></h1>
+  <h1><a href="index.html"><img alt="JET Dammsugaren" width="228" height="50" src="images/header.svg"></a></h1>
   <nav>
     <ul>
       <li> <a href="#video">Video</a></li>
@@ -24,8 +24,8 @@
 <main>
 
   <section id="video">
-    <h2>Video</h2>
-    <video width="600" height="400" controls>
+    <h2>Video</h2> <p class="sitenav"><a href="index.html">&#65085;</a> <a href="#appen">&#187;</a></p>
+    <video id="reklamVid" width="600" height="400" controls>
       <source src="movie.mp4" type="video/mp4">
           Your browser does not support the video tag.
     </video>
@@ -33,7 +33,7 @@
   </section>
 
   <section id="appen">
-    <h2>Appen</h2>
+    <h2>Appen</h2> <p class="sitenav"><a href="#video">&#171;</a> <a href="index.html">&#65085;</a> <a href="#galleri">&#187;</a></p>
       <img id="appMockup" alt="Den nya appen - välj rutt" width="226" height="463" src="images/app-Mockup2.gif">
       <div id="appBlurb">
         <h3>Välj rutt</h3>
@@ -50,48 +50,28 @@
   </section>
 
   <section id="galleri">
-    <h2>Galleri</h2>
-    <figure id="galleriFig"> BILD här med navigering?
-      380 x 380 px totalt
-    </figure>
-    <div class="Vblock1">
-      <h3 class="App_Rubrik">Rubrik 1</h3>
-      <p class="panel_Text"> Skulle man någonsin tillämpa ordspråket "lifvet vexlar", så är det utan
-den ringaste gensägelse på Gustaf Eriksson, Erik XIV:s och Katarina
-Månsdotters son. Med allt skäl kan man säga att han af lifvets vindkast
-slungades omkring som en boll från det ena landet till till det andra.
-</p>
-    </div>
-    <div class="Hblock1">
-      <h3 class="App_Rubrik">Rubrik 2</h3>
-      <p class="panel_Text"> Än spåra vi honom i Tyskland, der haa dock utstod de svåraste lidanden,
-      hans lefnad var underkastad; än finna vi honom i Sverige vid mötet med
-      systern, än i Ryssland, i hvilket land ödet ändtligen förunnade honom
-      en graf. Erik XIV var en folkets konung.   </p>
-    </div>
-    <div class="Vblock2">
-      <h3 class="App_Rubrik">Rubrik 3</h3>
-      <p class="panel_Text">  Ett vackert drag i
-Sigismunds karaktär är det, att han på alla möjliga sätt omhuldade
-Gustaf, och det oaktadt Johan III alls icke på något otvetydigt sätt
-lät förstå, att brorsonens uudanrödjande skulle ligga honom särdeles
-varmt om hjertat.
+    <h2>Galleri</h2> <p class="sitenav"><a href="#appen">&#171;</a> <a href="index.html">&#65085;</a> <a href="#spec">&#187;</a></p>
+    <figure id="galleriFig">
 
-</p>
+      BILD här med navigering?
+
+    </figure>
+    <div id="galleriText">
+      <h3 class="App_Rubrik">Beskrivning</h3>
+      <p class="panel_Text"> Med 3D-vision navigerar JET robotdammsugare enkelt i
+        ditt hem och städar enkelt runt möbler och
+        andra hinder.</p>
+        <p class="panel_Text">Sensorsystemet läser av rummets oliva nivåer och kan på så sätt upptäcka
+          trappor och avsatser. </p>
+        <p class="panel_Text">Smart laddning innebär att robotdammsugaren själv känner av när laddning
+          behövs och åker då till laddstationen.</p>
     </div>
-    <div class="Hblock2">
-      <h3 class="App_Rubrik">Rubrik 4</h3>
-      <p class="panel_Text"> Se här Gustaf Erikssons korta, men oändligt vackra saga, hvars senare
-      del utgör ämnet för vår lilla berättelse.
-      När upprorsförsöken mot Johan III blefvo allt tätare, begynte han,
-      såsom man säger, draga öronen åt sig med afseende på hufvadmännen för
-      uppviglingarne. </p>
-    </div>
+
 
   </section>
 
   <section id="spec">
-    <h2>Specifikationer</h2>
+    <h2>Specifikationer</h2> <p class="sitenav"><a href="#galleri">&#171;</a> <a href="index.html">&#65085;</a> <a href="#kontakt">&#187;</a></p>
     <div class="spec_panel">
       <h3 class="spec_Rubrik">Egenskaper</h3>
         <p>Perfekt rengöring</p>
@@ -136,13 +116,17 @@ varmt om hjertat.
 </main>
 
 <footer>
-  <h2>e</h2>
+  <figure id="logo">
+    <a href="index.html"><img width="159" height="150" alt="JET-logo" src="images/JETlogo.svg"></a>
+  </figure>
   <section id="kontakt">
-    <h3>Kontakt</h3>
+    <h3>Kontakt</h3> <p class="sitenav"><a href="index.html">&#65085;</a></p>
       <p>Hemsida programmerad av: Jenny Tapani</p>
       <p>Designkoncept ritad av: Elizabeth Nasimbwa</p>
       <p>Video framtagen av: Tyra Jansdotter</p>
-      <p class="epost"><a href="mailto:jentap@gmail.com">Jenny</a> <a href="mailto:elizabeth.nasimbwa@gmail.com">Elizabeth</a> <a href="mailto:tyra.jansdotter0001@stud.hkr.se">Tyra</a>
+      <p class="epost"><a href="mailto:jentap@gmail.com">&#64;Jenny</a>
+        <a href="mailto:elizabeth.nasimbwa@gmail.com">&#64;Elizabeth</a>
+        <a href="mailto:tyra.jansdotter0001@stud.hkr.se">&#64;Tyra</a>
     </section>
 
 </footer>
