--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <section id="video">
     <h2>Video</h2> <p class="sitenav"><a href="index.html">&#65085;</a> <a href="#appen">&#187;</a></p>
+
     <video id="reklamVid" width="600" height="400" controls>
       <source src="movie.mp4" type="video/mp4">
           Your browser does not support the video tag.
@@ -34,8 +35,10 @@
 
   <section id="appen">
     <h2>Appen</h2> <p class="sitenav"><a href="#video">&#171;</a> <a href="index.html">&#65085;</a> <a href="#galleri">&#187;</a></p>
+
       <img id="appMockup" alt="Den nya appen - välj rutt" width="226" height="463" src="images/app-Mockup2.gif">
-      <div id="appBlurb">
+
+      <div id="appBlurb"> <!-- En låda appBlurb för att kunna positionera rubriker och text     -->
         <h3>Välj rutt</h3>
         <p class="panel_Text">
           JET robotdammsugare låter dig välja rutt och därmed är det du som
@@ -46,21 +49,23 @@
           nystädat inför en specifik aktivitet till exempel en middagsbjudning eller
           få städat medan du är på jobbet och kom hem till ett nystädat hem varje dag. </p>
       </div>
-        <img id="appMockup2" alt="Den nya appen - schemalägg" width="226" height="463" src="images/app-Mockup3.gif">
+
+      <img id="appMockup2" alt="Den nya appen - schemalägg" width="226" height="463" src="images/app-Mockup3.gif">
   </section>
 
   <section id="galleri">
     <h2>Galleri</h2> <p class="sitenav"><a href="#appen">&#171;</a> <a href="index.html">&#65085;</a> <a href="#spec">&#187;</a></p>
+
     <figure id="galleriFig">
 
       BILD här med navigering?
 
     </figure>
-    <div id="galleriText">
-      <h3 class="App_Rubrik">Beskrivning</h3>
-      <p class="panel_Text"> Med 3D-vision navigerar JET robotdammsugare enkelt i
-        ditt hem och städar enkelt runt möbler och
-        andra hinder.</p>
+
+    <div id="galleriText"> <!-- låda galleriText för att kunna positionera rubriker och text -->
+      <h3>Beskrivning</h3>
+        <p class="panel_Text"> Med 3D-vision navigerar JET robotdammsugare enkelt i
+          ditt hem och städar enkelt runt möbler och andra hinder.</p>
         <p class="panel_Text">Sensorsystemet läser av rummets oliva nivåer och kan på så sätt upptäcka
           trappor och avsatser. </p>
         <p class="panel_Text">Smart laddning innebär att robotdammsugaren själv känner av när laddning
@@ -72,45 +77,46 @@
 
   <section id="spec">
     <h2>Specifikationer</h2> <p class="sitenav"><a href="#galleri">&#171;</a> <a href="index.html">&#65085;</a> <a href="#kontakt">&#187;</a></p>
-    <div class="spec_panel">
-      <h3 class="spec_Rubrik">Egenskaper</h3>
-        <p>Perfekt rengöring</p>
-        <p>Stor dammbehållare</p>
-        <p>Hörnrengöring</p>
-        <p>Säkerhetsstystem</p>
-        <p>Främre borste</p>
-        <p>Tvättbart filter</p>
-        <p>Filterindikator</p>
-        <p>Programerbar timer</p>
-        <p>Lättviktskonstruktion</p>
-        <p>Påslös</p>
 
+    <div class="spec_panel"> <!-- låda spec_panel för att kunna positionera specifikationer -->
+      <h3>Egenskaper</h3>
+        <p>&#10004; Perfekt rengöring</p>
+        <p>&#10004; Stor dammbehållare</p>
+        <p>&#10004; Hörnrengöring</p>
+        <p>&#10004; Säkerhetsstystem</p>
+        <p>&#10004; Främre borste</p>
+        <p>&#10004; Tvättbart filter</p>
+        <p>&#10004; Filterindikator</p>
+        <p>&#10004; Programerbar timer</p>
+        <p>&#10004; Lättviktskonstruktion</p>
+        <p>&#10004; Påslös</p>
     </div>
-    <div class="spec_panel">
-      <h3 class="spec_Rubrik">Mjukvara</h3>
-        <p>Senaste tekniken</p>
-        <p>Enkla menyer</p>
-        <p>Uppdaterbar - Ja</p>
-        <p>Virtuell barriär - Nej</p>
-        <p>Språkval - Ja</p>
-        <p>Ljus - av/på</p>
-        <p>Ljud - av/på</p>
 
-    </div>
     <div class="spec_panel">
-      <h3 class="spec_Rubrik">Mått</h3>
+      <h3>Mjukvara</h3>
+        <p>&#10004; Enkla menyer</p>
+        <p>&#10004; Senaste tekniken</p>
+        <p>&#10004; Uppdaterbar - Ja</p>
+        <p>&nbsp; Virtuell barriär - Nej</p>
+        <p>&#10004; Språkval - Ja</p>
+        <p>&#10004; Ljus - av/på</p>
+        <p>&#10004; Ljud - av/på</p>
+    </div>
+
+    <div class="spec_panel">
+      <h3>Mått</h3>
         <p>Höjd, mm 58 </p>
         <p>Diameter, mm 235</p>
         <p>Nettovikt, kg 2.32</p>
+    </div>
 
-    </div>
     <div class="spec_panel">
-      <h3 class="spec_Rubrik">Tillbehör</h3>
-      <!--p class="panel_Text"-->
-        <p>Fjärrkontroll - Ja</p>
-        <p>App - Ja</p>
-        <p>Extra filter - 2</p>
+      <h3>Tillbehör</h3>
+        <p>&#10004; Fjärrkontroll - Ja</p>
+        <p>&#10004; App - Ja</p>
+        <p>&nbsp; Extra filter - 2</p>
     </div>
+
   </section>
 
 </main>
