--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           Your browser does not support the video tag.
     </video>
     <p>Oväntat besök? Städa enkelt med nya JET!</p>
-  </section>
+  </section> <!-- sektion video slut-->
 
   <section id="appen">
     <h2>Appen</h2> <p class="sitenav"><a href="#video">&#171;</a> <a href="index.html">&#65085;</a> <a href="#galleri">&#187;</a></p>
@@ -51,7 +51,7 @@
       </div>
 
       <img id="appMockup2" alt="Den nya appen - schemalägg" width="226" height="463" src="images/app-Mockup3.gif">
-  </section>
+  </section><!-- sektion appen slut-->
 
   <section id="galleri">
     <h2>Galleri</h2> <p class="sitenav"><a href="#appen">&#171;</a> <a href="index.html">&#65085;</a> <a href="#spec">&#187;</a></p>
@@ -72,13 +72,12 @@
           behövs och åker då till laddstationen.</p>
     </div>
 
-
-  </section>
+  </section> <!-- sektion galleri slut -->
 
   <section id="spec">
     <h2>Specifikationer</h2> <p class="sitenav"><a href="#galleri">&#171;</a> <a href="index.html">&#65085;</a> <a href="#kontakt">&#187;</a></p>
 
-    <div class="spec_panel"> <!-- låda spec_panel för att kunna positionera specifikationer -->
+    <div class="spec_panel"> <!-- låda spec_panel 1 av 4 för att kunna positionera specifikationer -->
       <h3>Egenskaper</h3>
         <p>&#10004; Perfekt rengöring</p>
         <p>&#10004; Stor dammbehållare</p>
@@ -117,7 +116,7 @@
         <p>&nbsp; Extra filter - 2</p>
     </div>
 
-  </section>
+  </section> <!-- sektion spec slut-->
 
 </main>
 
@@ -127,10 +126,11 @@
   </figure>
   <section id="kontakt">
     <h3>Kontakt</h3> <p class="sitenav"><a href="index.html">&#65085;</a></p>
+
       <p>Hemsida programmerad av: Jenny Tapani</p>
       <p>Designkoncept ritad av: Elizabeth Nasimbwa</p>
       <p>Video framtagen av: Tyra Jansdotter</p>
-      <p class="epost"><a href="mailto:jentap@gmail.com">&#64;Jenny</a>
+      <p><a href="mailto:jentap@gmail.com">&#64;Jenny</a>
         <a href="mailto:elizabeth.nasimbwa@gmail.com">&#64;Elizabeth</a>
         <a href="mailto:tyra.jansdotter0001@stud.hkr.se">&#64;Tyra</a>
     </section>
