--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <main>
 
   <section id="video">
-    <h2>Video</h2> <p class="sitenav"><a href="index.html">&#65085;</a> <a href="#appen">&#187;</a></p>
+    <h2>Video</h2>
 
     <video id="reklamVid" width="600" height="400" controls>
       <source src="movie.mp4" type="video/mp4">
@@ -34,7 +34,7 @@
   </section> <!-- sektion video slut-->
 
   <section id="appen">
-    <h2>Appen</h2> <p class="sitenav"><a href="#video">&#171;</a> <a href="index.html">&#65085;</a> <a href="#galleri">&#187;</a></p>
+    <h2>Appen</h2>
 
       <img id="appMockup" alt="Den nya appen - välj rutt" width="226" height="463" src="images/app-Mockup2.gif">
 
@@ -54,7 +54,7 @@
   </section><!-- sektion appen slut-->
 
   <section id="galleri">
-    <h2>Galleri</h2> <p class="sitenav"><a href="#appen">&#171;</a> <a href="index.html">&#65085;</a> <a href="#spec">&#187;</a></p>
+    <h2>Galleri</h2>
 
     <figure id="galleriFig">
 
@@ -75,31 +75,31 @@
   </section> <!-- sektion galleri slut -->
 
   <section id="spec">
-    <h2>Specifikationer</h2> <p class="sitenav"><a href="#galleri">&#171;</a> <a href="index.html">&#65085;</a> <a href="#kontakt">&#187;</a></p>
+    <h2>Specifikationer</h2>
 
     <div class="spec_panel"> <!-- låda spec_panel 1 av 4 för att kunna positionera specifikationer -->
       <h3>Egenskaper</h3>
-        <p>&#10004; Perfekt rengöring</p>
-        <p>&#10004; Stor dammbehållare</p>
-        <p>&#10004; Hörnrengöring</p>
-        <p>&#10004; Säkerhetsstystem</p>
-        <p>&#10004; Främre borste</p>
-        <p>&#10004; Tvättbart filter</p>
-        <p>&#10004; Filterindikator</p>
-        <p>&#10004; Programerbar timer</p>
-        <p>&#10004; Lättviktskonstruktion</p>
-        <p>&#10004; Påslös</p>
+        <p>Perfekt rengöring</p>
+        <p>Stor dammbehållare</p>
+        <p>Hörnrengöring</p>
+        <p>Säkerhetsstystem</p>
+        <p>Främre borste</p>
+        <p>Tvättbart filter</p>
+        <p>Filterindikator</p>
+        <p>Programerbar timer</p>
+        <p>Lättviktskonstruktion</p>
+        <p>Påslös</p>
     </div>
 
     <div class="spec_panel">
       <h3>Mjukvara</h3>
-        <p>&#10004; Enkla menyer</p>
-        <p>&#10004; Senaste tekniken</p>
-        <p>&#10004; Uppdaterbar - Ja</p>
-        <p>&nbsp; Virtuell barriär - Nej</p>
-        <p>&#10004; Språkval - Ja</p>
-        <p>&#10004; Ljus - av/på</p>
-        <p>&#10004; Ljud - av/på</p>
+        <p>Enkla menyer</p>
+        <p>Senaste tekniken</p>
+        <p>Uppdaterbar - Ja</p>
+        <p>Virtuell barriär - Nej</p>
+        <p>Språkval - Ja</p>
+        <p>Ljus - av/på</p>
+        <p>Ljud - av/på</p>
     </div>
 
     <div class="spec_panel">
@@ -111,9 +111,9 @@
 
     <div class="spec_panel">
       <h3>Tillbehör</h3>
-        <p>&#10004; Fjärrkontroll - Ja</p>
-        <p>&#10004; App - Ja</p>
-        <p>&nbsp; Extra filter - 2</p>
+        <p>Fjärrkontroll - Ja</p>
+        <p>App - Ja</p>
+        <p>Extra filter - 2</p>
     </div>
 
   </section> <!-- sektion spec slut-->
@@ -125,7 +125,7 @@
     <a href="index.html"><img width="159" height="150" alt="JET-logo" src="images/JETlogo.svg"></a>
   </figure>
   <section id="kontakt">
-    <h3>Kontakt</h3> <p class="sitenav"><a href="index.html">&#65085;</a></p>
+    <h3>Kontakt</h3>
 
       <p>Hemsida programmerad av: Jenny Tapani</p>
       <p>Designkoncept ritad av: Elizabeth Nasimbwa</p>
@@ -134,7 +134,7 @@
         <a href="mailto:elizabeth.nasimbwa@gmail.com">&#64;Elizabeth</a>
         <a href="mailto:tyra.jansdotter0001@stud.hkr.se">&#64;Tyra</a>
     </section>
-
+<div class="sitenav"><a href="#video">&#65085;</a></div>
 </footer>
 
 
