Stavfel, små fix

--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="sv">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="">
 <meta name="author" content="Jenny Tapani, Tyra Jansdotter, Elizabeth Nasimbwa">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="images/browser-icon.png">
-<title> JET projektet </title>
+<title> JET Dammsugaren </title>
 </head>
 <body>
 
 <header>
-  <h1><a href="index.html"><img alt="JET Dammsugaren" width="228" height="50" src="images/header.svg"></a></h1>
+  <h1><a href="index.html"><img alt="JET Dammsugaren logo" width="228" height="50" src="images/header.svg"></a></h1>
   <nav>
     <ul>
       <li> <a href="#video">Video</a></li>
@@ -66,7 +65,7 @@
       <h3>Beskrivning</h3>
         <p class="panel_Text"> Med 3D-vision navigerar JET robotdammsugare enkelt i
           ditt hem och städar enkelt runt möbler och andra hinder.</p>
-        <p class="panel_Text">Sensorsystemet läser av rummets oliva nivåer och kan på så sätt upptäcka
+        <p class="panel_Text">Sensorsystemet läser av rummets olika nivåer och kan på så sätt upptäcka
           trappor och avsatser. </p>
         <p class="panel_Text">Smart laddning innebär att robotdammsugaren själv känner av när laddning
           behövs och åker då till laddstationen.</p>
@@ -82,7 +81,7 @@
         <p>Perfekt rengöring</p>
         <p>Stor dammbehållare</p>
         <p>Hörnrengöring</p>
-        <p>Säkerhetsstystem</p>
+        <p>Säkerhetssystem</p>
         <p>Främre borste</p>
         <p>Tvättbart filter</p>
         <p>Filterindikator</p>
