Sista ändringar?, bilder galleri

--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
 
   <section id="video">
     <h2>Video</h2>
-
-    <video id="reklamVid" width="600" height="400" controls>
-      <source src="movie.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-    </video>
+    <iframe id="reklamVid" width="711" height="400" src="https://www.youtube.com/embed/510F1MTVei0"
+      allow="autoplay; encrypted-media" allowfullscreen></iframe>
     <p>Oväntat besök? Städa enkelt med nya JET!</p>
   </section> <!-- sektion video slut-->
 
@@ -54,11 +51,8 @@
 
   <section id="galleri">
     <h2>Galleri</h2>
-
     <figure id="galleriFig">
-
-      BILD här med navigering?
-
+      <img src="images/galleri4_jet.jpg" alt="JET Dammsugaren jobbar i hemmet" width="626" height="417">
     </figure>
 
     <div id="galleriText"> <!-- låda galleriText för att kunna positionera rubriker och text -->
@@ -76,44 +70,45 @@
   <section id="spec">
     <h2>Specifikationer</h2>
 
-    <div class="spec_panel"> <!-- låda spec_panel 1 av 4 för att kunna positionera specifikationer -->
-      <h3>Egenskaper</h3>
-        <p>Perfekt rengöring</p>
-        <p>Stor dammbehållare</p>
-        <p>Hörnrengöring</p>
-        <p>Säkerhetssystem</p>
-        <p>Främre borste</p>
-        <p>Tvättbart filter</p>
-        <p>Filterindikator</p>
-        <p>Programerbar timer</p>
-        <p>Lättviktskonstruktion</p>
-        <p>Påslös</p>
-    </div>
+     <!-- låda spec_panel 1 av 4 för att kunna positionera specifikationer -->
+      <dl class="spec_panel">
+      <dt>Egenskaper</dt>
+        <dd>Perfekt rengöring</dd>
+        <dd>Stor dammbehållare</dd>
+        <dd>Hörnrengöring</dd>
+        <dd>Säkerhetssystem</dd>
+        <dd>Främre borste</dd>
+        <dd>Tvättbart filter</dd>
+        <dd>Filterindikator</dd>
+        <dd>Programerbar timer</dd>
+        <dd>Lättviktskonstruktion</dd>
+        <dd>Påslös</dd>
+      </dl>
 
-    <div class="spec_panel">
-      <h3>Mjukvara</h3>
-        <p>Enkla menyer</p>
-        <p>Senaste tekniken</p>
-        <p>Uppdaterbar - Ja</p>
-        <p>Virtuell barriär - Nej</p>
-        <p>Språkval - Ja</p>
-        <p>Ljus - av/på</p>
-        <p>Ljud - av/på</p>
-    </div>
+    <dl class="spec_panel">
+      <dt>Mjukvara</dt>
+        <dd>Enkla menyer</dd>
+        <dd>Senaste tekniken</dd>
+        <dd>Uppdaterbar - Ja</dd>
+        <dd>Virtuell barriär - Nej</dd>
+        <dd>Språkval - Ja</dd>
+        <dd>Ljus - av/på</dd>
+        <dd>Ljud - av/på</dd>
+    </dl>
 
-    <div class="spec_panel">
-      <h3>Mått</h3>
-        <p>Höjd, mm 58 </p>
-        <p>Diameter, mm 235</p>
-        <p>Nettovikt, kg 2.32</p>
-    </div>
+    <dl class="spec_panel">
+      <dt>Mått</dt>
+        <dd>Höjd, mm 58 </dd>
+        <dd>Diameter, mm 235</dd>
+        <dd>Nettovikt, kg 2.32</dd>
+    </dl>
 
-    <div class="spec_panel">
-      <h3>Tillbehör</h3>
-        <p>Fjärrkontroll - Ja</p>
-        <p>App - Ja</p>
-        <p>Extra filter - 2</p>
-    </div>
+    <dl class="spec_panel">
+      <dt>Tillbehör</dt>
+        <dd>Fjärrkontroll - Ja</dd>
+        <dd>App - Ja</dd>
+        <dd>Extra filter - 2</dd>
+    </dl>
 
   </section> <!-- sektion spec slut-->
 
